<resources>
    <string name="app_name">SDR</string>
    <string name="app_slogan">Find, Discover, Choose and Buy Products Of Your Choice.</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_seller_home">SellerHomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="approve_new_products">Approve New Products</string>
    <string name="welcome_admin">Welcome Admin</string>
    <string name="maintain_products">Maintain Products</string>
    <string name="check_new_orders">Check New Orders</string>
    <string name="check_and_approve_new_products">Check and Approve New Products</string>
    <string name="logout">Logout</string>
    <string name="product_name">Product Name</string>
    <string name="product_price">Product Price</string>
    <string name="product_description">Product Description</string>
    <string name="apply_changes">Apply Changes</string>
    <string name="delete_product">Delete Product</string>
    <string name="new_orders">New Orders</string>
    <string name="products">Products</string>
    <string name="total_price">Total Price =</string>
    <string name="shipment_details">Please write your Shipment Details.</string>
    <string name="your_name">Your Name</string>
    <string name="your_phone_number">Phone Number</string>
    <string name="your_shipment_address">Shipment Address</string>
    <string name="your_shipment_city_name">Shipment City Name</string>
    <string name="confirm">Confirm</string>
    <string name="shop_online">Shop Online</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="admin">Admin</string>
    <string name="not_admin">Not Admin</string>
    <string name="join_now">Join Now</string>
    <string name="already_have_an_account_login">Already have an Account? Login</string>
    <string name="seller_click_here">Are you a seller? Click Here.</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="full_name">Full Name</string>
    <string name="create_account">Create Account</string>
    <string name="reset_password">Reset Password</string>
    <string name="security_questions">Answer The Following Security Questions</string>
    <string name="mother_s_maiden_name">What is your mother\'s maiden name?</string>
    <string name="in_which_city_was_your_mother_born">In which city was your mother born?</string>
    <string name="verify">Verify</string>
    <string name="search">Search</string>
    <string name="add_product">Add Product</string>
    <string name="my_products">My Products</string>
    <string name="email_address">Email Address</string>
    <string name="seller_login_form">Seller Login Form</string>
    <string name="add_new_product">Add New Product</string>
    <string name="seller_registration_form">Seller Registration Form</string>
    <string name="shop_or_business_address">Shop or Business Address</string>
    <string name="register">Register</string>
    <string name="close">Close</string>
    <string name="update">Update</string>
    <string name="change_profile_image">Change Profile Image</string>
    <string name="mailing_address">Mailing Address</string>
    <string name="set_security_questions">Set Security Questions</string>
    <string name="product_quantity">Product Quantity</string>
    <string name="user_name">User Name</string>
    <string name="address_city">Address, City</string>
    <string name="date_time">Date Time</string>
    <string name="show_this_order_s_products">Show This Order\'s Products</string>
    <string name="product_state">Product State</string>
</resources>
