<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Sellers.SellerRegistrationActivity">

    <ImageView
        android:id="@+id/img_seller"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/seller"
        android:scaleType="centerCrop"/>

    <TextView
        android:id="@+id/title_seller"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/seller_registration_form"
        android:gravity="center"
        android:layout_below="@+id/img_seller"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="@color/colorPrimaryDark"/>

    <EditText
        android:id="@+id/seller_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_below="@+id/title_seller"
        android:hint="@string/full_name"
        android:inputType="text"
        android:textSize="16sp"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/seller_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_below="@+id/seller_name"
        android:hint="@string/your_phone_number"
        android:inputType="number"
        android:textSize="16sp"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/seller_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_below="@+id/seller_phone"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:textSize="16sp"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/seller_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_below="@+id/seller_email"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="16sp"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/seller_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_below="@+id/seller_password"
        android:hint="@string/shop_or_business_address"
        android:inputType="text"
        android:textSize="16sp"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/seller_register_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/seller_address"
        android:background="@drawable/buttons"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="18sp"
        />

    <Button
        android:id="@+id/seller_already_have_account_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/buttons"
        android:text="@string/already_have_an_account_login"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:layout_marginBottom="15dp"
        />




</RelativeLayout>