<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/colorPrimaryDark"
        android:padding="10dp">

        <TextView
            android:id="@+id/order_user_name"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:textColor="@color/white"
            android:textSize="14dp"
            android:layout_marginLeft="5dp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/order_phone_number"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="5dp"
            android:text="@string/your_phone_number"
            android:textAlignment="viewEnd"
            android:textColor="@color/white"
            android:textSize="14dp"
            android:layout_marginRight="5dp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/order_total_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/total_price"
            android:textColor="@color/white"
            android:textSize="14dp"
            android:textStyle="bold"
            android:layout_below="@+id/order_user_name"
            android:gravity="center"
            android:layout_marginTop="25dp"
            />

        <TextView
            android:id="@+id/order_address_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address_city"
            android:textColor="@color/white"
            android:textSize="14dp"
            android:textStyle="bold"
            android:layout_below="@+id/order_total_price"
            android:gravity="center"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:id="@+id/order_date_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date_time"
            android:textColor="@color/white"
            android:textSize="14dp"
            android:textStyle="bold"
            android:layout_below="@+id/order_address_city"
            android:gravity="center"
            android:layout_marginTop="10dp"
            />

        <Button
            android:id="@+id/show_all_products_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/order_date_time"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:background="@color/white"
            android:text="@string/show_this_order_s_products"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"/>
    </RelativeLayout>
</RelativeLayout>