<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Admin.AdminHomeActivity">

    <TextView
        android:id="@+id/admin_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_admin"
        android:textAlignment="center"
        android:textSize="@dimen/welcome_admin_text_size"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/maintain_btn"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_below="@+id/admin_welcome"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/maintain_products"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/check_orders_btn"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_below="@+id/maintain_btn"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/check_new_orders"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/check_approve_new_products_btn"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_below="@+id/check_orders_btn"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/check_and_approve_new_products"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/admin_logout_btn"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="15dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/logout"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textAllCaps="false"/>

</RelativeLayout>