<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp"
    app:cardElevation="15dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        
        <TextView
            android:id="@+id/product_name1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/product_name"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"/>

        <ImageView
            android:id="@+id/product_image1"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_below="@+id/product_name1"
            android:scaleType="centerCrop"
            android:layout_marginTop="2dp"/>

        <TextView
            android:id="@+id/product_price1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/product_price"
            android:layout_below="@+id/product_image1"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textColor="@color/colorPrimaryDark"/>

        <TextView
            android:id="@+id/product_description1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/product_description"
            android:layout_below="@+id/product_price1"
            android:textAlignment="center"
            android:layout_marginTop="2dp"
            android:textSize="16sp"
            android:textColor="@color/colorPrimaryDark"/>
        
    </RelativeLayout>


</androidx.cardview.widget.CardView>